[build-system]
requires = ["setuptools>=42",
            "pandas",
            "numpy",
            "datetime",
            "matplotlib",
            "seaborn",
            "scipy",
            "statsmodels",
            "mlxtend",
            "sklearn"
            ]
build-backend = "setuptools.build_meta"