[metadata]
name = kscanner
version = 0.0.1
author = Peerapak Adsavakulchai and Duncan Calvert
author_email = padsavak@gmail.com, duncanscalvert@gmail.com
description = KScanner is a novel combination of DBSCAN and K-Means clustering that uses automated Epsilon approximation to lower the total amount of iterations needed to identify the correct model parameters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DonutsDuncan/kscanner.git
project_urls =
    Bug Tracker = https://github.com/DonutsDuncan/kscanner/issues
    repository = https://github.com/DonutsDuncan/kscanner.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src